--- a/src/Wechat/ApiBundle/Resources/config/routing.yml
+++ b/src/Wechat/ApiBundle/Resources/config/routing.yml
@@ -10,6 +10,10 @@ wechat_api_empower:
     path:     /empower
     defaults: { _controller: WechatApiBundle:Default:empower }
 
+wechat_api_dltempmedia:
+    path:     /dltempmedia
+    defaults: { _controller: WechatApiBundle:Default:dltempmedia }
+
 wechat_api_empowertest:
     path:     /empowertest
     defaults: { _controller: WechatApiBundle:Default:empowertest }
