--- a/src/Wechat/ApiBundle/Resources/config/routing.yml
+++ b/src/Wechat/ApiBundle/Resources/config/routing.yml
@@ -15,7 +15,7 @@ wechat_api_dltempmedia:
     defaults: { _controller: WechatApiBundle:Default:dltempmedia }
 
 wechat_api_dltemp:
-    path:     /dltempmedia
+    path:     /dltemp
     defaults: { _controller: WechatApiBundle:Default:dltemp }
 
 wechat_api_empowertest:
